# kustomize.axl

./: .bazelrc  .gitattributes  .gitignore  BUILD.bazel  MODULE.bazel  README.md  multitool.lock.json
.aspect/gazelle/: kustomize.axl
base/: BUILD.bazel
overlays/production/: BUILD.bazel  kustomization.yaml
overlays/staging/: BUILD.bazel  kustomization.yaml
