bazel_dep(name = "rules_kustomize", version = "0.5.3")
bazel_dep(name = "gazelle", version = "0.47.0")
bazel_dep(name = "rules_multitool", version = "1.11.1")
bazel_dep(name = "bazelrc-preset.bzl", version = "1.9.2")

multitool = use_extension("@rules_multitool//multitool:extension.bzl", "multitool")
multitool.hub(lockfile = "//:multitool.lock.json")
use_repo(multitool, "multitool")
