load("@rules_kustomize//kustomize:kustomize.bzl", "kustomization", "kustomized_resources")

kustomization(
    name = "kustomization",
    srcs = ["map.yaml"],
    visibility = ["//visibility:public"],
    deps = ["//base:kustomization"],
)

kustomized_resources(
    name = "staging",
    kustomization = ":kustomization",
    load_restrictor = "None",
    visibility = ["//visibility:public"],
)
